<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Card sebagai background -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="60dp"
            android:padding="24dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/attention"
                android:layout_marginTop="48dp"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/alert_message"
                android:textAlignment="center"/>

            <Button
                android:id="@+id/btn_positive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/button_alert"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Ikon di tengah (berpotongan dengan Card) -->
    <ImageView
        android:id="@+id/icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/error_placeholder"
        android:elevation="12dp"
        android:background="@drawable/icon_background"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/cardView"
        app:layout_constraintBottom_toTopOf="@id/cardView"/>

</androidx.constraintlayout.widget.ConstraintLayout>