<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.addstory.AddStoryActivity">

    <ImageView
        android:id="@+id/story_picture"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        tools:src="@drawable/pict_init"
        android:src="@drawable/pict_init"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="18dp"/>

    <com.dicoding.storyapp.custom.MyCustomLoginButton
        android:id="@+id/btn_to_gallery"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/gallery"
        android:enabled="true"
        app:layout_constraintTop_toBottomOf="@id/story_picture"
        app:layout_constraintStart_toStartOf="@id/story_picture"
        android:layout_marginTop="20dp" />
    
    <com.dicoding.storyapp.custom.MyCustomRegisterButton
        android:id="@+id/btn_to_camera"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        android:enabled="true"
        app:layout_constraintTop_toBottomOf="@id/story_picture"
        app:layout_constraintEnd_toEndOf="@id/story_picture"
        android:layout_marginTop="20dp" />
    
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/btn_to_gallery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="18dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_text_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine"
            android:hint="@string/description_text"
            android:lines="10"
            android:minLines="10"
            android:gravity="top|start"
            android:scrollbars="vertical" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.dicoding.storyapp.custom.MyCustomRegisterButton
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:layout_constraintTop_toBottomOf="@id/input_layout_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="30dp" />

    <ImageView
        android:id="@+id/progress_bar"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/loading_animation"
        tools:visibility="gone"
        android:elevation="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>