<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    tools:context=".ui.detail.DetailActivity">

    <ImageView
        android:id="@+id/story_picture"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        tools:src="@tools:sample/backgrounds/scenic"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        android:elevation="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/cardview_detail"
        app:layout_constraintTop_toBottomOf="@id/story_picture"
        app:cardElevation="4dp"
        app:cardCornerRadius="20dp"
        android:layout_marginHorizontal="18dp"
        android:layout_marginVertical="29dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_creator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/creator"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginStart="18dp"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/tv_created_at"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/createdAt"
                android:textSize="15sp"
                android:layout_marginStart="18dp" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="18dp"
                android:text="@string/description"
                android:justificationMode="inter_word"
                android:layout_marginTop="17dp"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/progress_bar"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/loading_animation"
        tools:visibility="gone"
        android:elevation="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>